# test_task_adalisk

./: CMakeLists.txt  gphGraphIO.h  graphIO.h  jsonGraphIO.h  main.cpp  stdGraphIO.h  test-task.md  test.json
